finish the new related work. start to go through other sections. TODO: add new results into the result section.

--- a/icra.bib
+++ b/icra.bib
@@ -3298,3 +3298,51 @@ issn = "0027-8424",
   year={2011},
   school={The University Of British Columbia (Vancouver}
 }
+
+@article{ljung:2010,
+  title={Perspectives on system identification},
+  author={Ljung, Lennart},
+  journal={Annual Reviews in Control},
+  volume={34},
+  number={1},
+  pages={1--12},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{swevers:2007,
+  title={Dynamic model identification for industrial robots-Integrated experiment design and parameter estimation},
+  author={Swevers, Jan and Verdonck, Walter and De Schutter, Joris},
+  journal={IEEE Control Systems Magazine},
+  volume={27},
+  number={5},
+  pages={58--71},
+  year={2007},
+  publisher={Institute of Electrical and Electronics Engineers}
+}
+
+@article{Kolev:2015,
+  title={Physically consistent state estimation and system identification for contacts},
+  author={Kolev, Svetoslav and Todorov, Emanuel},
+  journal={Under review},
+  year={2015},
+
+}
+
+@incollection{akimoto:2010,
+  title={Bidirectional relation between CMA evolution strategies and natural evolution strategies},
+  author={Akimoto, Youhei and Nagata, Yuichi and Ono, Isao and Kobayashi, Shigenobu},
+  booktitle={Parallel Problem Solving from Nature, PPSN XI},
+  pages={154--163},
+  year={2010},
+  publisher={Springer}
+}
+
+@inproceedings{glasmachers:2010,
+  title={Exponential natural evolution strategies},
+  author={Glasmachers, Tobias and Schaul, Tom and Yi, Sun and Wierstra, Daan and Schmidhuber, J{\"u}rgen},
+  booktitle={Proceedings of the 12th annual conference on Genetic and evolutionary computation},
+  pages={393--400},
+  year={2010},
+  organization={ACM}
+}
