--- a/icra.tex
+++ b/icra.tex
@@ -58,5 +58,7 @@ Simulation-Driven Robot Controller Design
 \input{conclusion}
 \bibliographystyle{IEEEtran}
 \bibliography{icra}
+\appendix
+\input{appendix}
 
 \end{document}
