--- a/results.tex
+++ b/results.tex
@@ -1,7 +1,15 @@
 \section{Results}
-In this section we present the results of our system. We use three locomotion tasks to test our system: The robot rises from a leaning, sitting or kneeling position to an erect stance. Please watch the accompanying video for the robot performance in the simulation and in the real world. Our system was implemented in C++, and we used DART with our actuator model to simulate the physics of the robot and its surrounding environments. The simulator runs in real time on a laptop with 2.6GHz quad-core CPU and 16GB of memory. In controller optimization and simulation calibration, the CMA uses 32 samples per iteration and at most 50 iterations. We implemented a parallel version of CMA that can distribute the computation across all four cores on the CPU. It takes less than 15 minutes to find an optimal solution in controller optimization or simulation calibration.
 
-We choose BIOLOID GP as our robot platform. BIOLOID GP is a humanoid robot that consists of 18 degrees of freedom powered by Dynamixel AX-12/AX-18 servos. The communication between the PC and the robot is through a serial port. To control the robot, a host program on the PC writes the desired pose $\bar{\mathbf{q}}$ to the serial port that is connected to the robot. A seperate program that runs on the robot's onboard microprocessor listens to this port and sends the desired joint angle to each actuator. At the same time, the robot performance data $\tilde{\mathbf{x}}$ is measured and sent back to the computer. We use onboard rotary encoders to measure joint angles and a VICON motion capture system to measure the global position and orientation of the robot's torso.
+In this section we present the results of our system. We use three locomotion tasks to test our system: The robot rises from a leaning, sitting or kneeling position to an erect stance. Please watch the accompanying video for the robot performance in the simulation and in the real world.
+
+\subsection{Experiment Setup}
+
+We choose BIOLOID GP as our robot platform. BIOLOID GP is a humanoid robot that consists of 18 degrees of freedom powered by Dynamixel AX-12/AX-18 servos. The communication between the PC and the robot is through a serial port. To control the robot, a master program on the PC writes the desired pose $\bar{\mathbf{q}}$ to the serial port that is connected to the robot. A slave program that runs on the robot's onboard microprocessor listens to this port and sends the desired joint angle to each actuator. At the same time, the robot performance data $\tilde{\mathbf{x}}$ is measured and sent back to the computer. We use onboard rotary encoders to measure joint angles and a VICON motion capture system to measure the global position and orientation of the robot's torso. The average latency of the whole control loop on our robot is 16ms. It is measured by a timer in our program between the time that the program starts sending the actuator commands to the robot and the time that it finishes reading the sensor measurements from the robot.
+
+\subsection{Implementation Details}
+
+Our system was implemented in C++ and ran on a laptop with 2.6GHz quad-core CPU and 16GB of memory. We used DART to simulate the physics of the robot and its surrounding environments. We use 1ms as the time step in physical simulation. We only update the control signal every 16 time steps to better match our simulation with the actual latency. In controller optimization, we halve the size of the optimization problem by exploiting the symmetry of the motion. We find that all four tasks can be achieved with symmetric motions. Thus we constrain that the joint motions on the left bodies mirror those on the right bodies. In addition, we only search for the joint trajectories for the lower body. The CMA solvers in both controller optimization and simulation calibration use 32 samples per iteration and at most 50 iterations. We distribute the computation across all four cores on the CPU. It takes less than 15 minutes to find an optimal solution in controller optimization or simulation calibration.
+
 
 \subsection{Rising from a Sitting Position}
 
