a pass one everything. including new paragraphs in results and discussion sessions. TODO: Do a complete pass tomorrow. Send to advisors. Work on the video and images.

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,7 +1,33 @@
 \section{Discussion}
+\begin{table}
+\caption{Generalizability of the calibrated simulation}
+ \label{table:generalize}
+\begin{center}
+\begin{tabular}{|c|c|c|c|}
+\hline
+ Tasks &  I &  II  &  III \\
+ \hline
+ I & Succeed & &  \\
+ II & Fail & Succeed & Fail \\
+ III & & & Succeed \\
+ I\&II & & & \\
+ I\&III & & & \\
+ II\&III & & & \\
+ I\&II\&III & & &\\
+\hline
+\end{tabular}
+\end{center}
+ \end{table}
 
-This paper has presented an end-to-end solution to automatically design locomotion controllers for robots. This solution consists of a set of computational tools: a simulation tool that simulates the dynamics of the robot and its environment, an optimization tool that automatically searches for a controller in the virtual environment and a calibration tool that improves the simulation accuracy to ease controller transfer from the virtual to the real world. This powerful system allows us to efficiently design controllers of a humanoid robot to achieve three different tasks, rising from leaning, sitting and kneeling poses to an erect stance.
 
-Since the main goal of this work is to demonstrate that the computational tools developed for character animation, including physical simulation and controller optimization, can be applied to robotics, the biggest challenge is to cross the Reality Gap. The evaluation shows that our simulation calibration algorithm is effective to narrow down this gap. In all the examples, at most one iteration of calibration is needed before we can transfer the controller to the real robot. However, we want to emphasize that the goal of simulation calibration is not to find the  true simulation parameters. Instead, it finds a set of parameters that reduce the discrepancy between the simulation and the real experiment for a specific locomotion task. We observe that the simulation parameters optimized for the task of lean-to-stand can be entirely different from those of kneel-to-stand. In other words, the calibrated simulator is only valid for the current task and should not be used in a different task. If the tasks are the same but the initial configuations are slightly different, the result of simulation calibration can be reused. For example, in the task of lean-to-stand, we can use a simulator calibrated for a specific initial leaning angle to optimize controllers if the robot needs to stand up from a different initial leaning angle. In this case, our experiments show that the result of simulation calibration can be reused if the initial leaning angle is perturbed within five degrees. 
+One important component of our system is simulation calibration. It helps us cross the Reality Gap. The results show that our simulation calibration algorithm is effective to narrow down this gap, with minimal number of the robot experiments. In all the experiments, at most two iteration of calibration (or approximately 12 seconds of robot data) is needed before we can transfer the controller to the real robot. This amount of robot data is far less than those needed in typical system identification methods.
 
-It would be more interesting if simulation calibration can discover the truth so that the calibrated simulator can be used for different tasks. We believe that this is possible if we use controllers and their corresponding robot performance data from multiple different tasks as the input of simulation calibration. We leave this as one of the future work. In our examples, we have shown that adjusting the COM and the actuator gains are enough, but other simulation parameters might also be important for a wider range of tasks. Including more simulation parameters and performing feature selection would be a promising direction for future work. In addition, some discrepancies between the simulation and the real world may not be explained by inaccurate simulation parameters alone. Unmodeled dynamics could also contribute to the discrepancy. Combining parametric and non-parametric models in simulation calibration for unmodeled dynamics is also an intereting avenue for future work.
+Similar to other system identification methods, the parameters optimized in simulation calibration may not be the true physical parameters. For example, we observe that the simulation parameters optimized for the task of lean-to-stand can be different from those of kneel-to-stand. In other words, the calibrated simulator is overfitted to the current task and may not be useful for a different task. Overfitting could be a problem if the goal is to estimate the true physical parameters. However, it is not a problem in our case because the goal is to find a controller for a specific task. Actually, it is beneficial because tightly coupling simulation calibration with the control task makes it possible to use very small number of robot data.
+
+Can we calibrate a simulation so that it can be generalized to other task? To answer this question, we perform the following experiments. In the first experiment, we calibrate the simulation for one task (e.g. lean-to-stand). We perform controller optimization for a different task (e.g. sit-to-stand) in this calibrated simulator and then test this controller on the robot. The first three rows of Table \ref{table:generalize} summarize the generalizability of the calibrated simulation when it is calibrated for a single task. Task I is lean-to-stand. Task II is sit-to-stand and Task III is kneel-to-stand. In most cases, the calibrated simulator cannot be generalized to a different task. In the second experiment, we calibrate the simulation with multiple tasks (e.g. lean-to-stand and sit-to-stand), optimize the controller for a different task (e.g. kneel-to-stand) in this calibrated simulation and test the controller on the robot. The last four rows of Table \ref{table:generalize} summarize the generalizability of the calibrated simulation when it is calibrated for multiple tasks. It clear that its generalizability is greatly improved if multiple tasks are used to calibrate the simulation. These experiments show that if we need to design multiple controllers for different tasks, we may not need to perform simulation calibration for each of the task. It is likely that after developing the first few controllers using our system, the calibrated simulation would be accurate enough that further calibration is not necessary.
+
+\section{Conclusion}
+
+This paper has presented a complete pipeline to automatically design locomotion controllers for robots. This solution consists of a set of powerful computational tools: physical simulation, controller optimization and simulation calibration. Our system allows us to efficiently design controllers of a humanoid robot to achieve four different tasks: lean-to-stand, sit-to-stand, kneel-to-stand and stand-to-handstand.
+
+There are two venues of future work. First, we will include more simulation parameters in simulation calibration. In this paper, we have shown that adjusting the COM and the actuator gains are enough for all four tasks, but other simulation parameters might also be important for other tasks. A problem of including more simulation parameters is the risk of local minimum and overfitting. Performing some automatic prioritizing and selection on candidate parameters would be a promising future research. Second, we believe that our system can be generalized to control other types of locomotion, such as walking, biking or more challenging gymnastic stunts. In these tasks, feedback control is necessary. In the future, we plan to extend our system to include feedback control and test it on a wider range of locomotion tasks.
