--- a/icra.bib
+++ b/icra.bib
@@ -3207,7 +3207,7 @@ issn = "0027-8424",
 
 @article{Bahar:2014,
 {
-  author = {Mohd Bazli Bahar and Muhammad Fahmi Miskon and Norazhar Abu Bakar and Fariz Ali and Ahmad Zaki Shukor},
+  author = {Bahar, Mohd Bazli and Miskon, Muhammad Fahmi and Bakar, Norazhar Abu and Ali, Fariz and Shukor, Ahmad Zaki},
  title = {STS Motion Control Using Humanoid Robot},
  journal = {Research Journal of Applied Sciences, Engineering and Technology},
  volume = {8},
