--- a/optimization.tex
+++ b/optimization.tex
@@ -1,6 +1,6 @@
 \section{Controller Optimization}
 
-Given the physical simulation, we can design controllers to enable the robot to achieve various locomotion tasks in the simulated environment. The three tasks that we use to test our system are rising from a leaning, sitting or kneeling position to an erect stance (Figure \ref{fig:task}). For each task, the joint configuration of the initial pose and the final pose are provided by the user. The goal of controller optimization is to find a sequence of control signals $\bar{q}(t)$ so that the robot can move from the initial to the final pose without losing balance. We purposefully choose to use only feedforward controllers\footnote{There is still an internal feedback loop in the actuators to track the desired joint angle (See Chapter~\ref{sec:motorDynamics}). However, this feedback loop is not fully programmable.} in this work, which means that the control signal $\bar{\mathbf{q}}(t)$ is a only function of time $t$ and does not depend on the states of the robot. With the feedforward control alone, the controller transfer can only succeed if the simulation is close enough to the real-world environment. This will put the simulation calibration subsystem into more thorough tests.
+Given the physical simulation, we can design controllers to enable the robot to achieve various locomotion tasks in the simulated environment. The three tasks that we use to test our system are rising from a leaning, sitting or kneeling position to an erect stance (Figure \ref{fig:task}). For each task, the joint configuration of the initial pose and the final pose are provided by the user. The goal of controller optimization is to find a sequence of control signals $\bar{q}(t)$ so that the robot can move from the initial to the final pose without losing balance. We purposefully choose to use only feedforward controllers\footnote{Note that there is still an internal feedback loop in the actuators to track the desired joint angle. However, this feedback loop is not fully programmable and we do not alter this feedback loop in our controller design.} in this work, which means that the control signal $\bar{\mathbf{q}}(t)$ is a only function of time $t$ and does not depend on the states of the robot. With the feedforward control alone, the controller transfer can only succeed if the simulation is close enough to the real-world environment. This will put the simulation calibration subsystem into more thorough tests.
 
 \begin{figure*}[!t]
   \centering
