--- a/related.tex
+++ b/related.tex
@@ -1,6 +1,6 @@
 \section{Related Work}
 
-The locomotion tasks that this paper foucses on involve changing between two poses and maintaining balance during the motion. Tasks that fall into this category and are extensively studied in robotics are sit-to-stand \cite{Faloutsos:2003,Iida:2004,Pchelkin:2010,Mistry:2010,Bahar:2014} and lie-to-stand \cite{morimoto:1998,Faloutsos:2001,Kanehiro:2007,Hirukawa:2005}. While many of these prior work focuses on one specific motion, we target at a more general problem of finding controllers for a wide range of such locomotion tasks. A few related work tried to tackle this more general problem. Jones \cite{jones:2011} developed rising motions for both biped and quadraped using pose tracking, orientation correction and virtual force. Lin and Huang \cite{lin:2012} used motion planning and dynamics filtering to develop rising up motions from various initial lying poses. Tassa et al. \cite{tassa:2012} used Model Predictive Control to synthesize complex behaviors, including getting up from an aribitrary pose on the ground. Although these work has shown impressive results in simulation, experiments on real robots were not presented.
+The locomotion tasks that this paper foucses on involve changing between two poses and maintaining balance during the motion. Tasks that fall into this category and are extensively studied in robotics are sit-to-stand \cite{Faloutsos:2003,Iida:2004,Pchelkin:2010,Mistry:2010} and lie-to-stand \cite{morimoto:1998,Faloutsos:2001,Hirukawa:2005,Kanehiro:2007}. While many of these prior work focuses on one specific motion, we target at a more general problem of finding controllers for a wide range of such locomotion tasks. A few related work tried to tackle this more general problem. Jones \cite{jones:2011} developed rising motions for both biped and quadraped using pose tracking, orientation correction and virtual force. Lin and Huang \cite{lin:2012} used motion planning and dynamics filtering to develop rising up motions from various initial lying poses. Tassa et al. \cite{tassa:2012} used Model Predictive Control to synthesize complex behaviors, including getting up from an aribitrary pose on the ground. Although these work has shown impressive results in simulation, experiments on real robots were not presented.
 
 Locomotion often involve frequent change of contacts. It poses significant challenges to controller optimization due to the discontinuous contact forces. We choose to use Covariance Matrix Adaptation (CMA) \cite{Hansen:2009}, a stochastic sampling-based optimization algorithm, to tackle this challenge. Although CMA is not widely used in robotics, it is a popular method in physically-based character animation to search for control parameters when the problem domain is highly discontinous \cite{Wu:2010, Wang:2010, Tan:2014}.
 
